<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdaLab1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="altaUsers">- Alta Usuarios -</string>
    <string name="enviar">-Enviar-</string>
    <string name="limpiar">-Limpiar-</string>
    <string name="userName">User Name:</string>
    <string name="pass">Password:</string>
    <string name="email">Email:</string>

</resources>